--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="skill-row">
         <img class="image201" src="images/boxing.png" alt="">
         <h3>Boxing Challenge</h3>
-        <p>Beat me at a boxing match and dinner's on me. 🍽️🥊</p>
+        <p>Beat me at Call Of Duty multiplayer match and dinner is on me. 🍽️🥊</p>
       </div>
     </div>
     <hr>
